# 4th-year-proj

./: .gitignore  Cargo.toml  README.md  report-MT.md  reports.md  wgpu-glossary.md
latex-gen/: Cargo.toml
latex-gen/src/: main.rs
measure/: Cargo.toml  results-laptop.json  results-pc.json  to-latex-2.py  to-latex.py
measure/src/: main.rs  tests.rs  utils.rs
media/: bbox-calc.blend  bbox-calc.blend1  compositing.blend  compositing.blend1  compositing.xcf  stacking.blend  stacking.blend1
old/shader/: invert.wgsl
old/src/: image.rs  lib.rs  main.rs
old/src/effect/: mod.rs  per_pixel.rs
report/: report.tex  tables-2.tex  tables-laptop.tex  tables-pc.tex  tables.tex
shader/: brightness-contrast.wgsl  invert.wgsl
src/: context.rs  ctx.rs  image.rs  instance.rs  lib.rs  main.rs  render.rs  tex.rs  tree.rs  types.rs  utils.rs
src/effects/: mod.rs  per_pixel.rs  transform.rs
