[package]
name = "image_ed"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.9"
image = "0.23"
index_vec = "0.1"
log = "0.4"
pollster = "0.2"
wgpu = "0.11"

[profile.release]
debug = true

# File IO is really slow in unoptimised builds.  Since we always have to load the images off disk to
# process them, it becomes faster to spend a tiny bit longer on compile times for a substantial
# increase in runtime.  Of course, optimisation level makes negligible difference to GPU speed.
[profile.dev]
opt-level = 1
